--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:nckiser@ncsu.edu">email</a></li>
+	        		<li><a href="mailto:nckiser@ncsu.edu">nckiser@ncsu.edu</a></li>
 	        		<li><a href="https://github.com/NCKiser">github.com/NCKiser</a></li>
 				</ul>
 			</footer>
