--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
+	background-color: #181818
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -18,15 +19,17 @@ a {
 }
 a:hover {
     text-decoration: underline;
+	color: #fff;
 }
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+	color: #FFF;
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: #fff;
 }
 footer {
     border-top: 1px solid #d5d5d5;
@@ -36,6 +39,7 @@ footer {
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
+	color: #FFF
 }
 
 ul.posts li {
