--- a/css/main.css
+++ b/css/main.css
@@ -9,17 +9,20 @@ nav ul, footer ul {
     list-style: none;
     font-weight: bold;
 }
+nav ul li {
+	font-size: 1.4em;
+}
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
 a {
-    text-decoration: none;
+	text-decoration: none;
     color: #999;
 }
 a:hover {
-    text-decoration: underline;
-	color: #fff;
+	text-decoration: underline;
+    color: #afa;
 }
 h1 {
     font-size: 3em;
