--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 body {
     margin: 60px auto;
     width: 70%;
-	background-color: #181818
+	background-color: #181818;
+	font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -10,7 +11,7 @@ nav ul, footer ul {
     font-weight: bold;
 }
 nav ul li {
-	font-size: 1.4em;
+	font-size: 1.5em;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -26,7 +27,6 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 	color: #FFF;
 }
 p {
