added some projects 2014-15

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-			<nav>
+			<div class="nav">
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/projects">Projects</a></li>
@@ -14,17 +14,17 @@
 					<li><a href="/blog">Blog</a></li>
 					<li><a href="/contact">Contact</a></li>
 	    		</ul>
-			</nav>
+			</div>
 			<div class="container">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
+			<div class="footer">
 	    		<ul>
 	        		<li><a href="mailto:nckiser@ncsu.edu">nckiser@ncsu.edu</a></li>
 	        		<li><a href="https://github.com/NCKiser">github.com/NCKiser</a></li>
 				</ul>
-			</footer>
+			</div>
 		</body>
 	</html>
