--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 {% if page.thumbnail %}
-<img src="/assets/{{ page.project }}/{{ page.thumbnail }}" alt="{{ page.project }}: {{ page.thumbnail }}" style="width:100%">
+<img src="{{ page.thumbnail }}" alt="{{ page.title }}" style="width:100%">
 <br>
 {% endif %}
 <div class="post">
