--- a/css/main.css
+++ b/css/main.css
@@ -1,50 +1,67 @@
 body {
     margin: 60px auto;
-    width: 70%;
+    width: 80%;
 	background-color: #181818;
+	color: #fff;
 	font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
+a {
+	color: #999;
+	text-decoration: none;
 }
-nav ul li {
+
+a:hover {
+	color: #afa;
+	text-decoration: underline;
+}
+
+.nav ul, .footer ul{
+	padding: 0px;
+	margin-bottom: 5px;
+}
+
+.nav ul li, .footer ul li{
+	list-style: none;
+	margin-right: 20px;
+	display: inline;
+}
+
+.posts, .blurb{
 	font-size: 1.5em;
 }
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-	text-decoration: none;
-    color: #999;
-}
-a:hover {
-	text-decoration: underline;
-    color: #afa;
-}
-h1 {
-    font-size: 3em;
-	color: #FFF;
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #fff;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+
+.footer{
+	border-top: 1px solid #ffffff;
+	font-size: 1em;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-	color: #FFF
+.nav{
+	border-bottom: 1px solid #ffffff;
+	font-size: 1.5em;
+	font-weight: bold;
+	margin-bottom: 0px;
 }
 
-ul.posts li {
-    list-style: none;
+.r180 {
+  -webkit-transform:rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.r90 {
+  -webkit-transform:rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.r270 {
+  -webkit-transform:rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  transform: rotate(270deg);
 }
