--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,16 +6,17 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-			<div class="nav">
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/projects">Projects</a></li>
-	        		<li><a href="/resume">Resume</a></li>
-					<li><a href="/blog">Blog</a></li>
-					<li><a href="/contact">Contact</a></li>
-	    		</ul>
-			</div>
-			<div class="container">
+            <div class="nav" style="border: 1px solid white">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/resume">Resume</a></li>
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                </ul>
+            </div>
+
+			<div class="container" >
 			
 			{{ content }}
 			
