--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,3 +9,106 @@ layout: default
 <div class="post">
   {{ content }}
 </div>
+
+<!--
+<!DOCTYPE html>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+    margin: 60px auto;
+    width: 80%;
+	background-color: #181818;
+	color: #fff;
+	font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+
+.column {
+  padding: 5px;
+  float: left;
+  width: 25%;
+}
+
+img.hover-shadow {
+  transition: 0s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0px 0px 0px 5px white;
+}
+</style>
+<body>
+
+<h2 style="text-align:center">Lightbox</h2>
+
+<div id="myModal">
+  <div class="modal-content">
+
+    <div class="mySlides">
+      <img src="img_nature_wide.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <img src="img_snow_wide.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <img src="img_mountains_wide.jpg" style="width:100%">
+    </div>
+    
+    <div class="mySlides">
+      <img src="img_lights_wide.jpg" style="width:100%">
+    </div>
+ 
+   
+  </div>
+</div>
+
+<div>
+  <div class="column">
+    <img src="img_nature.jpg" style="width:100%" onclick="currentSlide(1)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="img_snow.jpg" style="width:100%" onclick="currentSlide(2)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="img_mountains.jpg" style="width:100%" onclick="currentSlide(3)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="img_lights.jpg" style="width:100%" onclick="currentSlide(4)" class="hover-shadow cursor">
+  </div>
+</div>
+
+<script>
+
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  slides[slideIndex-1].style.display = "block";
+}
+</script>
+    
+</body>
+</html>
+-->
