--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+		<br> More Updates Coming Soon! <br>
             <div class="nav" style="border: 1px solid white">
                 <ul>
                     <li><a href="/">Home</a></li>
