--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,10 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-		<br> More Updates Coming Soon! <br>
+		<br>
+			<h1> More Updates Coming Soon! </h1>
+		<br>
+		<br>
             <div class="nav" style="border: 1px solid white">
                 <ul>
                     <li><a href="/">Home</a></li>
