--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 			<h1> More Updates Coming Soon! </h1>
 		<br>
 		<br>
-            <div class="nav" style="border: 1px solid white">
+            <div class="nav" style="border: none">
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/projects">Projects</a></li>
