--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,9 @@
-@font-face {
-  font-family: "Normschrift";
-  src: url(/assets/isocpeur.ttf) format("truetype");
-}
-
 body {
     margin: 20px auto;
     width: 80%;
 	background-color: #181818;
 	color: #fff;
-	font-family: 'Normschrift', 'Helvetica', 'Arial', 'Sans-Serif';
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 1.5em;
 }
 a {
