--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,20 +6,19 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-		<br>
-			<h1> More Updates Coming Soon! </h1>
-		<br>
-		<br>
-            <div class="nav" style="border: none">
+		
+            <div class="nav" style="border: none" >
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/projects">Projects</a></li>
                     <li><a href="/resume">Resume</a></li>
-                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/shop">Shop</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </div>
-
+			<br>
+			<h1> More Updates Coming Soon! </h1>
+			<br>
 			<div class="container" >
 			
 			{{ content }}
@@ -27,7 +26,7 @@
 			</div><!-- /.container -->
 			<div class="footer">
 	    		<ul>
-	        		<li><a href="mailto:nckiser@ncsu.edu">nckiser@ncsu.edu</a></li>
+	        		<li><a href="mailto:contact@noahkiser.com">nckiser@ncsu.edu</a></li>
 	        		<li><a href="https://github.com/NCKiser">github.com/NCKiser</a></li>
 				</ul>
 			</div>
