--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 			</div><!-- /.container -->
 			<div class="footer">
 	    		<ul>
-	        		<li><a href="mailto:contact@noahkiser.com">nckiser@ncsu.edu</a></li>
+	        		<li><a href="mailto:contact@noahkiser.com">contact@noahkiser.com</a></li>
 	        		<li><a href="https://github.com/NCKiser">github.com/NCKiser</a></li>
 				</ul>
 			</div>
