--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/projects">Projects</a></li>
                     <li><a href="/resume">Resume</a></li>
-                    <li><a href="/shop">Shop</a></li>
+                    <li><a href="https://kiserdesigns.com">Shop</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </div>
